--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="cabecera_contenedor">
         <div class="cabecera_logo">
-            <img src="/img/logo.svg" alt="logo delivery app">
+            <img src="img/logo.svg" alt="logo delivery app">
         </div>
         <nav class="navegacion">
          <a href="#" class="navegacion_link">Iniciar Sesión</a>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="formulario_imagen">
-                    <img src="/img/dibujo_repartidor.svg" alt="imagen de repartidor">
+                    <img src="img/dibujo_repartidor.svg" alt="imagen de repartidor">
                 </div>
             </div>
         </section>
@@ -47,13 +47,13 @@
                 <h2 class="pasos_cabecera">¿Cómo funciona?<span class="pasos_sub">tan fácil como 1,2 y 3</span></h2>
                 <div class="pasos_imgs">
                     <div class="paso_a_paso">
-                        <img class="paso_imagen" src="/img/paso_1.png" alt="img de paso....">
+                        <img class="paso_imagen" src="img/paso_1.png" alt="img de paso....">
                     </div>
                     <div class="paso_a_paso">
-                        <img class="paso_imagen" src="/img/paso_2.png" alt="img de paso....">
+                        <img class="paso_imagen" src="img/paso_2.png" alt="img de paso....">
                     </div>
                     <div class="paso_a_paso">
-                        <img class="paso_imagen" src="/img/paso_3.png" alt="img de paso....">
+                        <img class="paso_imagen" src="img/paso_3.png" alt="img de paso....">
                     </div>
                 </div>
             </div>
@@ -64,11 +64,11 @@
                 <div class="testimonial_1">
                     <header class="testimonial_cabecera">
                         <div class="testimonial_img">
-                            <img src="/img/testimonial1.jpg" alt="img de usuario">
+                            <img src="img/testimonial1.jpg" alt="img de usuario">
                         </div>
                         <div class="testimonial_informacion">
                             <p class="testimonial_usuario">Juan Perez</p>
-                            <img class="testimoial_calificacion" src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img class="testimoial_calificacion" src="img/estrellas.png" alt="calificacion en estrellas">
                         </div>
                     </header>
                     <p class="testimonial_texto">
@@ -80,11 +80,11 @@
                 <div class="testimonial_2">
                     <header class="testimonial_cabecera">
                         <div class="testimonial_img">
-                            <img src="/img/testimonial5.jpg" alt="img de usuario">
+                            <img src="img/testimonial5.jpg" alt="img de usuario">
                         </div>
                         <div class="testimonial_informacion">
                             <p class="testimonial_usuario">Itzel Cruz</p>
-                            <img class="testimoial_calificacion" src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img class="testimoial_calificacion" src="img/estrellas.png" alt="calificacion en estrellas">
                         </div>
                     </header>
                     <p class="testimonial_texto">
@@ -95,11 +95,11 @@
                 <div class="testimonial_3">
                     <header class="testimonial_cabecera">
                         <div class="testimonial_img">
-                            <img src="/img/testimonial4.jpg" alt="img de usuario">
+                            <img src="img/testimonial4.jpg" alt="img de usuario">
                         </div>
                         <div class="testimonial_informacion">
                             <p class="testimonial_usuario">Rocio Rodriguez</p>
-                            <img class="testimoial_calificacion" src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img class="testimoial_calificacion" src="img/estrellas.png" alt="calificacion en estrellas">
                         </div>
                     </header>
                     <p class="testimonial_texto">
@@ -111,11 +111,11 @@
                 <div class="testimonial_4">
                     <header class="testimonial_cabecera">
                         <div class="testimonial_img">
-                            <img src="/img/testimonial2.jpg" alt="img de usuario">
+                            <img src="img/testimonial2.jpg" alt="img de usuario">
                         </div>
                         <div class="testimonial_informacion">
                             <p class="testimonial_usuario">Cynthia V</p>
-                            <img class="testimoial_calificacion" src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img class="testimoial_calificacion" src="img/estrellas.png" alt="calificacion en estrellas">
                         </div>
                     </header>
                     <p class="testimonial_texto">
@@ -127,11 +127,11 @@
                 <div class="testimonial_5">
                     <header class="testimonial_cabecera">
                         <div class="testimonial_img">
-                            <img src="/img/testimonial3.jpg" alt="img de usuario">
+                            <img src="img/testimonial3.jpg" alt="img de usuario">
                         </div>
                         <div class="testimonial_informacion">
                             <p class="testimonial_usuario">Jose Hernandez</p>
-                            <img class="testimoial_calificacion" src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img class="testimoial_calificacion" src="img/estrellas.png" alt="calificacion en estrellas">
                         </div>
                     </header>
                     <p class="testimonial_texto">
@@ -147,10 +147,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -164,10 +164,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -181,10 +181,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -198,10 +198,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -215,10 +215,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -232,10 +232,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -249,10 +249,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -266,10 +266,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -283,10 +283,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -300,10 +300,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -317,10 +317,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -334,10 +334,10 @@
                 <div class="favorito">
                     <div class="favorito_contenidos">
                         <div class="favorito_img">
-                            <img src="/img/logo_ensaladas.png" alt="logo de ensaladas">
+                            <img src="img/logo_ensaladas.png" alt="logo de ensaladas">
                         </div>
                         <div class="favorito_texto">
-                            <img src="/img/estrellas.png" alt="calificacion en estrellas">
+                            <img src="img/estrellas.png" alt="calificacion en estrellas">
                             <h3 class="favorito_sub">Green Ensaladas</h3>
                             <p class="favorito_descripcion">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos ullam
@@ -355,7 +355,7 @@
             <h2 class="trabajo_titulo">Gana dinero con AppComida</h2>
             <div class="trabajo_contenedor">
                 <div class="trabajo_img">
-                    <img src="/img/repartidor.jpg" alt="imagen de trabajador">
+                    <img src="img/repartidor.jpg" alt="imagen de trabajador">
                 </div>
                 <div class="trabajo_contenido">
                     <p class="trabajo_texto">
